--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="My_page.HTML">Travel</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
                 </ul>
@@ -128,7 +128,7 @@
             </section>
             <hr class="m-0" />
             <!-- Skills-->
-            <!-- <section class="resume-section" id="skills">
+            <!-- <section class="resume-section" id="skills"> 
                 <div class="resume-section-content">
                     <h2 class="mb-5 accentcolor2 newbcolor">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
