--- a/My_page.HTML
+++ b/My_page.HTML
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Adventures</title>
-    <link href="css/My_page_styles.css" rel="stylesheet">
+    <link href="css/My_page_styles.css" rel="stylesheet" />
 </head>
 <body>
     <h1 id="Top">Porter Gord's Travel Adventures</h1>
